modified email address

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title : 作ったものリスト
 tagline: Site Tagline
 author :
   name : Masaki Waga
-  email : masakiwaga+github@gmail.com
+  email : masakiwaga@gmail.com
   github : MasWag
   twitter : @MasWag
   feedburner : feedname
