--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author :
   name : Masaki Waga
   email : masakiwaga@gmail.com
   github : MasWag
-  twitter : @MasWag
+  twitter : MasWag
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
