Revert "modified email address"
This reverts commit be38c8d0304258df3dde8eb02da08fb17ca1b61d.

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title : test
 tagline: Site Tagline
 author :
   name : Masaki Waga
-  email : masakiwaga@gmail.com
+  email : masakiwaga+github@gmail.com
   github : MasWag
   twitter : MasWag
   feedburner : feedname
