layoutをdefaultで設定するようにした

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,13 @@ author :
   twitter : MasWag
   feedburner : feedname
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "page"
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
