--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,7 @@ JB :
   sharing :
     provider : false
     
+include: [".well-known"]
   # Settings for all other include helpers can be defined by creating 
   # a hash with key named for the given helper. ex:
   #
